fixed the input text borders and radio buttons alignment

--- a/survey_form/css/styles.css
+++ b/survey_form/css/styles.css
@@ -38,22 +38,53 @@ header p {
     padding: 3rem;
     border-radius: 1rem;
     /*background-color: rgba(255,127,0,1); */
-    background-color: rgb(227, 117, 7);
+    background-color: rgba(227, 117, 7, 0.9);
     border: 2px solid rgba(0,0,0,1);
 }
+fieldset {
+    border: none;
+    /*background-color: blue;*/
+}
+p {
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 label, input {
     display: block;
-}
-label {
-    /*background-color: red;*/
-}
-input, textarea, select {
     width: 100%;
-    min-height: 2rem;
+}
+
+.input-text {
+    height: 2.25rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0;
+    border-radius: 0.25rem;
+    border: 1px solid #ced4da;
+}
+
+legend {
+    padding-left: 0.5rem;
+    
+}
+
+.input-radio {
+    display: inline;
+    width: unset;
+    min-width: 1.25rem;
+    min-height: 1.25rem;
+    margin-right: 0.5rem;
+    vertical-align: middle;
+}
+
+/*input, textarea, select {
+    width: 100%;
+    height: 2.5rem;
     font-size: 1rem;
     margin: 0.5rem 0 1rem 0;
 }
-
+*/
 .inline {
     display: inline;
     width: unset;
@@ -61,7 +92,3 @@ input, textarea, select {
     margin: 0;
 }
 
-fieldset {
-    border: none;
-    /*background-color: blue;*/
-}
